# skr8tr

./: .gitignore  CLAUDE.md  LICENSE  MILESTONES.md  Makefile  OPERATIONS.md  README.md  SESSION_STATE.md  flake.nix  shell.nix
agent/: Cargo.toml
agent/crates/ra-rag/: Cargo.toml
agent/crates/ra-rag/src/: chunker.rs  embedder.rs  generator.rs  lib.rs  pipeline.rs  retriever.rs  types.rs
agent/crates/skr8tr-agent/: Cargo.toml
agent/crates/skr8tr-agent/src/: autofix.rs  events.rs  ingest.rs  main.rs  nlcmd.rs  reasoner.rs  watcher.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
demos/sovereign-market/: build-all.sh
demos/sovereign-market/services/: Cargo.toml
demos/sovereign-market/services/cart-svc/: Cargo.toml
demos/sovereign-market/services/cart-svc/src/: main.rs
demos/sovereign-market/services/frontend-svc/: Cargo.toml
demos/sovereign-market/services/frontend-svc/src/: main.rs
demos/sovereign-market/services/inventory-svc/: Cargo.toml
demos/sovereign-market/services/inventory-svc/src/: main.rs
demos/sovereign-market/services/order-svc/: Cargo.toml
demos/sovereign-market/services/order-svc/src/: main.rs
demos/sovereign-market/services/product-svc/: Cargo.toml
demos/sovereign-market/services/product-svc/src/: main.rs
demos/sovereign-market/services/recommendation-svc/: Cargo.toml
demos/sovereign-market/services/recommendation-svc/src/: main.rs
demos/sovereign-market/services/review-svc/: Cargo.toml
demos/sovereign-market/services/review-svc/src/: main.rs
demos/sovereign-market/services/search-svc/: Cargo.toml
demos/sovereign-market/services/search-svc/src/: main.rs
demos/sovereign-market/services/user-svc/: Cargo.toml
demos/sovereign-market/services/user-svc/src/: main.rs
docs/: CNAME  index.html
docs/blog/: http-ingress-in-320-lines-of-c.html  index.html  live-mesh-on-gcp-three-vms-no-kubernetes.html  post-quantum-auth-no-passwords.html  rolling-updates-without-readiness-probes.html  sovereign-audit-chain-hipaa-compliant.html  sovereign-market-9-microservices-no-kubernetes.html  why-we-killed-kubernetes.html
examples/: analytics-job.skr8tr  lambdac-job.skr8tr  my-server.skr8tr  react-app.skr8tr  vm-workload.skr8tr
src/cockpit/: gen_skrtrpass.c  skr8tr_cockpit.c  skrtrpass.h
src/core/: fabric.c  fabric.h  skr8tr_audit.c  skr8tr_audit.h  skr8tr_syslog.c  skr8tr_syslog.h  skrauth.c  skrauth.h
src/daemon/: skr8tr_ingress.c  skr8tr_node.c  skr8tr_reg.c  skr8tr_sched.c
src/enterprise/: .gitignore  ENTERPRISE_LAWS.md  flake.nix  skr8tr_audit.h  skr8tr_autoscale.c  skr8tr_autoscale.h  skr8tr_conductor_mt.c  skr8tr_conductor_mt.h  skr8tr_rbac.c  skr8tr_rbac.h  (+2 more)
ui/: index.html
(+68 files in other folders)
