# SSoA LEVEL 3: MANIFEST SHARD
# FILE: agent/crates/skr8tr-agent/Cargo.toml
# MISSION: Autonomous healing + NL command agent for the Skr8tr mesh.

[package]
name    = "skr8tr-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "skr8tr-agent"
path = "src/main.rs"

[dependencies]
ra-rag             = { path = "../ra-rag" }
tokio.workspace    = true
clap.workspace     = true
walkdir.workspace  = true
anyhow.workspace   = true
tracing.workspace  = true
tracing-subscriber.workspace = true
serde.workspace    = true
serde_json.workspace = true
uuid.workspace     = true
