[package]
name = "frontend-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
